@@ -117,6 +117,10 @@ public final class FileFilters {
      */
     public static final FileChooser.ExtensionFilter SQLITE = new FileChooser.ExtensionFilter(LabelGrabber.INSTANCE.getLabel("filefilters.description.sqlite.files") + " (*.sqlite)", "*.sqlite");
     /**
+     * The file filter used for Presentation Manager songs.
+     */
+    public static final FileChooser.ExtensionFilter PM_SONG = new FileChooser.ExtensionFilter(LabelGrabber.INSTANCE.getLabel("filefilters.description.pmsong.files") + " (*.sng)", "*.sng");
+    /**
      * The file filter used for MainTable.dat.
      */
     public static final FileChooser.ExtensionFilter MAINTABLE_DAT = new FileChooser.ExtensionFilter(LabelGrabber.INSTANCE.getLabel("filefilters.description.maintable.dat") + " (MainTable.dat)", "MainTable.dat");
